v1.45.0: ChatGPT upgrade polished — resilient ticks, GUI palette, settings, ComboAssist register